<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary"
    android:orientation="vertical"
    tools:context=".Add_savings">

    <EditText
        android:id="@+id/saving"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:autofillHints="100000"
        android:hint="@string/saving"
        android:inputType="text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:autofillHints="100000"
        android:hint="@string/total"
        android:inputType="text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/goal"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:autofillHints="100000"
        android:hint="@string/goal"
        android:inputType="text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20sp"
        android:text="@string/save"
        android:textSize="22sp" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20sp"
        android:text="@string/add_button"
        android:textSize="22sp" />


</LinearLayout>
