<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Your existing layout content -->
        <TextView
            android:id="@+id/savingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saving_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_label"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/goalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal_label"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/add_saving"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add_saving"
            app:layout_constraintBottom_toTopOf="@id/back_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="115dp"
            android:layout_height="103dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/back_button"
            app:layout_constraintBottom_toBottomOf="@id/goalTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Add more views here for displaying multiple savings -->

    </LinearLayout>

</ScrollView>
