<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary70"
    android:orientation="vertical"
    tools:context=".Expenses">

    <EditText
        android:id="@+id/expense"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:autofillHints="100000"
        android:hint="@string/expense"
        android:inputType="text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/expense_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/expense_total"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:autofillHints="100000"
        android:hint="@string/expense_total"
        android:inputType="text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20sp"
        android:text="@string/save"
        android:textSize="22sp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="115dp"
        android:layout_height="103dp"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back_button"
        android:textSize="24sp" />


</LinearLayout>